2011-04-30 Jerome Pasquier  <rainbru@free.fr>

	* src/ogreGui/Makefile.am (rainbrurpg_tests_ogregui_SOURCES): Removed 
	some unit tests with Ogre failling due to Singleton issues.
	
	* src/ogreGui/FontManagerTestWithOgre.cpp: created.

	* configure.in (AC_CONFIG_FILES): Removed 'RainbruRPG.html/Makefile' 
	to make	autoreconf work without calling ./bootstrap.
	
	* src/testHelpers/OgreMinimalSetup.cpp (setupOgre): Trying to catch an
	exception when creating Ogre::Root.

2011-04-09 Jerome Pasquier  <rainbru@free.fr>

	* src/ogreGui/: reate an individual binary for DrawableTest.
	
	* src/testHelpers/OgreMinimalSetup.hpp (setpOgre): removed default 
	argument to avoid type mismatch.
	
	* src/testHelpers/OgreMinimalSetupTest: test that Ogre::Root
	singleton is not null.

2011-03-11 Jerome Pasquier  <rainbru@free.fr>

	* src/testHelpers/OgreMinimalSetup.hpp (setupOgre): add the
	custom_log parameter with true default value. All classes
	using it uses false value if an Ogre3D assertion occurs.

2011-03-05 Jerome Pasquier  <rainbru@free.fr>

	* media/materials/scripts/Makefile.am (datafiles_DATA): Added
	Examples.program to the installed files to fix an Ogre3d
	Exception.

2011-03-01 Jerome Pasquier  <rainbru@free.fr>

	* acinclude.m4 (RB_CHECK_PLSM2): Check implemenetd using 
	PKG_CHECK_MODULES.

2011-02-26 Jerome Pasquier  <rainbru@free.fr>

	* src/common/globaluri.cpp (installConfigFile): Switch a GTR string
	from _MID to _HUG to fix a memory issue.

	* configure.in: Checks for Boost.unit through m4/rb_boost_test.m4.
	* m4/rb_boost_test.rb: Check for Boost.Test library and header.

2011-02-19 Jerome Pasquier  <rainbru@free.fr>

	* src/maincore/inputmanager.cpp (initialise): uses OIS's
	getNumberOfDevices() function

2011-02-17 Jerome Pasquier  <rainbru@free.fr>

	* m4/rb_freetype.m4: Improved version check using float number
	and `bc`.

2011-01-29 Jerome Pasquier  <rainbru@free.fr>

	* src/testHelpers/DummyRenderSystem: Started implementation.
