@@ -1,3 +1,5 @@
+Please update http://rainbrurpg.sourceforge.net/wiki/bin/view/Main/BuildingFromSources when modifying this file.
+
 The following package should be installed before RainbruRPG is installed:
 
 * Boost.Test 1.34
