@@ -3,7 +3,6 @@
 #+TODO: TODO | DONE
 #+TODO: TODO | CANCELED
 
-					
 * v1.0.0
 ** v0.3.0
 *** v0.2.1
@@ -257,6 +256,12 @@ name, date, heure, gamestate, position, name perso, name server, versions
      + Files in tests/
 **** TODO SPARE TIME Modification of existing unittests
 **** TODO SPARE TIME New unit tests implementation
+     CLOCK: [2011-05-27 ven. 21:18]--[2011-05-27 ven. 22:12] =>  0:54
+- [-] in OgreGui
+      - [X] FontTest.cpp
+      - [ ] GlyphTest.cpp
+	    Must also test copy ctor and assignment opeator
+      - [ ] GuiVertexTest.cpp
 **** tool/adminsite-databackup
     A comand-line tool to backup adminsite XML files that takes the version
     number as argument (used by backup_prog script).
@@ -860,7 +865,7 @@ name, date, heure, gamestate, position, name perso, name server, versions
      CLOCK: [2011-03-01 mar. 16:25]--[2011-03-01 mar. 16:32] =>  0:07
 - [X] build PLSM2
 - [X] Uses pkg-config
-**** CANCELED Fix some memory-related issues (client's segfault)          [100%]
+**** CANCELED Fix some memory-related issues (client's segfault)      [100%]
      CLOCK: [2011-05-14 sam. 16:30]--[2011-05-14 sam. 16:59] =>  0:29
      CLOCK: [2011-04-30 sam. 14:49]--[2011-04-30 sam. 15:17] =>  0:28
      CLOCK: [2011-04-30 sam. 11:33]--[2011-04-30 sam. 11:55] =>  0:22
@@ -1034,7 +1039,6 @@ Unable to locate vertex program called Ogre/BasicVertexPrograms/AmbientOneTextur
 - [ ] Should create RenderSystem_GL.dll from Ogre3D
       Need OpenGL for minwg32
 - [ ] Should provide GNU gettext for win32
-- [ ] Can we `make distbz2` from autotools
 **** Miscelaneous                                                     [37%]
      :CLOCK:
      CLOCK: [2011-01-23 dim. 16:22]--[2011-01-23 dim. 16:39] =>  0:17
@@ -1050,6 +1054,8 @@ Unable to locate vertex program called Ogre/BasicVertexPrograms/AmbientOneTextur
 - [ ] Trying to fix configure script warnings
       See the 'freetype-config: integer expression expected' warning
 - [ ] Must change LauncherOptions icons
+- [ ] May remove interdepencies ogreGui/Maincore 
+      and correct wiki:BuildingFromSources
 **** Sourceforge release                                              [0%]
 - [ ] Removed CEGUI reference from Sourceforge project overview
 - [ ] Explain CEGUI give up in an blog post
