@@ -65,21 +65,35 @@
   </tr>
 
 <!-- Add here a version when it is finished (when switching to revision++) -->
-  <tr class="regTest2">
+  <tr class="regTest1">
     <td>v0.0.5-211</td>
-    <td>19 mar 2011</td>                               <!-- Date                  -->
-    <td align="right">43&nbsp;101</td>                 <!-- SLOC                  -->
+    <td>27 may 2011</td>                               <!-- Date                  -->
+    <td align="right">43&nbsp;269</td>                 <!-- SLOC                  -->
     <td align="right">13</td>                          <!-- Console count         -->
-    <td>220&nbsp;<font color="red">fail</font></td >   <!-- CppUnit unit tests    -->
-    <td>41&nbsp;<font color="red">fail</font></td>     <!-- Boost.Test unit tests -->
-    <td><font color="red">fail</font></td >            <!-- vg OreGui             -->
-    <td><font color="red">fail</font></td >            <!-- vg Core               -->
+    <td>220&nbsp;<font color="red">fail</font></td>    <!-- CppUnit unit tests    -->
+    <td>50&nbsp;<font color="green">success</font></td><!-- Boost.Test unit tests -->
+    <td><font color="red">fail</font></td>             <!-- vg OreGui             -->
+    <td><font color="red">fail</font></td>             <!-- vg Core               -->
     <td><font color="red">No</font></td>               <!-- Linux                 -->
     <td><font color="red">No</font></td>               <!-- Win32                 -->
     <td>417</td>                                       <!-- Number of PO msg      -->
     <td><font color="red">Failed</font></td>           <!-- Unit tests result     -->
   </tr>
-
+  
+  <tr class="regTest2">
+    <td>v0.0.5-211</td>
+    <td>19 mar 2011</td>
+    <td align="right">43&nbsp;101</td>
+    <td align="right">13</td>
+    <td>220&nbsp;<font color="red">fail</font></td>
+    <td>41&nbsp;<font color="red">fail</font></td>
+    <td><font color="red">fail</font></td>
+    <td><font color="red">fail</font></td>
+    <td><font color="red">No</font></td>
+    <td><font color="red">No</font></td>
+    <td>417</td>
+    <td><font color="red">Failed</font></td>
+  </tr>
   <tr class="regTest1">
     <td>v0.0.5-210</td>
     <td>28 jan 2011</td>
@@ -1064,6 +1078,6 @@
      <A HREF="#UpNote014">Up</a><br>
 <hr>
 
-<!-- hhmts start -->Last modified: Sat Jan 29 20:35:57 CET 2011 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Fri May 27 22:51:12 CEST 2011 <!-- hhmts end -->
 </body>
 </html>
